Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1601,7 +1601,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "import seaborn as sns\n",
+    "\n",
+    "\n"
    ]
   },
   {
