Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1602,8 +1602,7 @@
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
-    "\n",
-    "x = \n"
+    "import mat\n"
    ]
   },
   {
