Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1602,7 +1602,8 @@
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
-    "import mat\n"
+    "import matplotlib.pyplot as plt\n",
+    "\n"
    ]
   },
   {
