Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1603,7 +1603,8 @@
    "source": [
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "\n"
+    "%matplotlib inline\n",
+    "plt.style.\n"
    ]
   },
   {
