Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1604,7 +1604,9 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "plt.style.\n"
+    "plt.style.use('seaborn')\n",
+    "\n",
+    "\n"
    ]
   },
   {
