--- a/index.ipynb
+++ b/index.ipynb
@@ -1606,7 +1606,7 @@
     "%matplotlib inline\n",
     "plt.style.use('seaborn')\n",
     "\n",
-    "df.groupby('')\n"
+    "df.groupby('Deaths')\n"
    ]
   },
   {
