--- a/index.ipynb
+++ b/index.ipynb
@@ -1597,70 +1597,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "State\n",
-       "Alabama                  860780\n",
-       "Alaska                    63334\n",
-       "Arizona                  838094\n",
-       "Arkansas                 522914\n",
-       "California              4307061\n",
-       "Colorado                 561283\n",
-       "Connecticut              531290\n",
-       "Delaware                 135933\n",
-       "District of Columbia      94073\n",
-       "Florida                 3131111\n",
-       "Georgia                 1259017\n",
-       "Hawaii                   172244\n",
-       "Idaho                    200077\n",
-       "Illinois                1872171\n",
-       "Indiana                 1031634\n",
-       "Iowa                     507247\n",
-       "Kansas                   448828\n",
-       "Kentucky                 752585\n",
-       "Louisiana                755914\n",
-       "Maine                    231756\n",
-       "Maryland                 800510\n",
-       "Massachusetts            987031\n",
-       "Michigan                1599942\n",
-       "Minnesota                702284\n",
-       "Mississippi              526127\n",
-       "Missouri                1008288\n",
-       "Montana                  158429\n",
-       "Nebraska                 277962\n",
-       "Nevada                   345245\n",
-       "New Hampshire            187917\n",
-       "New Jersey              1291554\n",
-       "New Mexico               281598\n",
-       "New York                2741575\n",
-       "North Carolina          1399009\n",
-       "North Dakota             107281\n",
-       "Ohio                    1987276\n",
-       "Oklahoma                 656535\n",
-       "Oregon                   575952\n",
-       "Pennsylvania            2313855\n",
-       "Rhode Island             176266\n",
-       "South Carolina           732571\n",
-       "South Dakota             128599\n",
-       "Tennessee               1066727\n",
-       "Texas                   2969214\n",
-       "Utah                     260479\n",
-       "Vermont                   95300\n",
-       "Virginia                1071163\n",
-       "Washington               865686\n",
-       "West Virginia            386224\n",
-       "Wisconsin                857629\n",
-       "Wyoming                   77386\n",
-       "Name: Deaths, dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'barplot'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-ede134470c09>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstyle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'seaborn'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'State'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Deaths'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbarplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   4374\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4375\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4376\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4377\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4378\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'barplot'"
+     ]
     }
    ],
    "source": [
@@ -1669,7 +1619,7 @@
     "%matplotlib inline\n",
     "plt.style.use('seaborn')\n",
     "\n",
-    "df.groupby('State')['Deaths'].sum()\n"
+    "df.groupby('State')['Deaths'].sum().barplot()\n"
    ]
   },
   {
