Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1619,7 +1619,7 @@
     "%matplotlib inline\n",
     "plt.style.use('seaborn')\n",
     "\n",
-    "df.groupby('State')['Deaths'].sum().barplot()\n"
+    "df.groupby('State')['Deaths'].sum().plot()\n"
    ]
   },
   {
