--- a/index.ipynb
+++ b/index.ipynb
@@ -1685,10 +1685,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      3579\n",
+       "1      7443\n",
+       "2    169339\n",
+       "3    347921\n",
+       "4      7366\n",
+       "Name: Population, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Population.head()"
+   ]
   },
   {
    "cell_type": "markdown",
