Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1722,7 +1722,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.Population.value_co"
+   ]
   },
   {
    "cell_type": "markdown",
