--- a/index.ipynb
+++ b/index.ipynb
@@ -1719,11 +1719,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Not Applicable    75\n",
+       "4412               2\n",
+       "96274              2\n",
+       "249                2\n",
+       "6420               2\n",
+       "Name: Population, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.Population.value_co"
+    "df.Population.value_counts().head()"
    ]
   },
   {
