Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1770,7 +1770,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "to_drop = df[df]\n"
+    "to_drop = df[df.Population == ]\n"
    ]
   },
   {
