Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2987,7 +2987,8 @@
    ],
    "source": [
     "#Your code here\n",
-    "to_drop = df[df.Population == 'Not Applicable']\n"
+    "to_drop = df[df.Population == 'Not Applicable']\n",
+    "df.drop(to_drop.index)\n"
    ]
   },
   {
