--- a/index.ipynb
+++ b/index.ipynb
@@ -2988,7 +2988,7 @@
    "source": [
     "#Your code here\n",
     "to_drop = df[df.Population == 'Not Applicable']\n",
-    "df.drop(to_drop.index)\n"
+    "df.drop(to_drop.index,axis=0)\n"
    ]
   },
   {
