Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1765,18 +1765,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'int64' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-d4324cf956a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mto_drop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPopulation\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Not Applicable'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mto_drop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPopulation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'int64' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 4040 entries, 0 to 4114\n",
+      "Data columns (total 12 columns):\n",
+      "Notes                       0 non-null float64\n",
+      "State                       4040 non-null object\n",
+      "State Code                  4040 non-null int64\n",
+      "Ten-Year Age Groups         4040 non-null object\n",
+      "Ten-Year Age Groups Code    4040 non-null object\n",
+      "Gender                      4040 non-null object\n",
+      "Gender Code                 4040 non-null object\n",
+      "Race                        4040 non-null object\n",
+      "Race Code                   4040 non-null object\n",
+      "Deaths                      4040 non-null int64\n",
+      "Population                  4040 non-null object\n",
+      "Crude Rate                  4040 non-null object\n",
+      "dtypes: float64(1), int64(2), object(9)\n",
+      "memory usage: 410.3+ KB\n"
      ]
     }
    ],
@@ -1786,7 +1798,7 @@
     "\n",
     "to_drop = df[df.Population == 'Not Applicable']\n",
     "df.drop(to_drop.index,axis=0,inplace=True)\n",
-    "df.Population.astype(int64)\n",
+    "df.Population.astype('int64')\n",
     "df.info()\n"
    ]
   },
