Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1785,9 +1785,9 @@
       "Race                        4040 non-null object\n",
       "Race Code                   4040 non-null object\n",
       "Deaths                      4040 non-null int64\n",
-      "Population                  4040 non-null object\n",
+      "Population                  4040 non-null int64\n",
       "Crude Rate                  4040 non-null object\n",
-      "dtypes: float64(1), int64(2), object(9)\n",
+      "dtypes: float64(1), int64(3), object(8)\n",
       "memory usage: 410.3+ KB\n"
      ]
     }
@@ -1798,7 +1798,7 @@
     "\n",
     "to_drop = df[df.Population == 'Not Applicable']\n",
     "df.drop(to_drop.index,axis=0,inplace=True)\n",
-    "df.Population.astype('int64')\n",
+    "df.Population = df.Population.astype('int64')\n",
     "df.info()\n"
    ]
   },
