Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1627,7 +1627,7 @@
     "%matplotlib inline\n",
     "plt.style.use('seaborn')\n",
     "\n",
-    "df.groupby('State')['Deaths'].sum().plot(kind='bar')\n"
+    "df.groupby('State')['Deaths'].sum()sort_values().plot(kind='bar')\n"
    ]
   },
   {
