--- a/index.ipynb
+++ b/index.ipynb
@@ -1807,7 +1807,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "df.groupby('State')['Deaths'].sum().sort_values().plot(kind='barh',figsize=(15,8));\n"
    ]
   },
   {
