--- a/index.ipynb
+++ b/index.ipynb
@@ -1858,7 +1858,7 @@
    "outputs": [],
    "source": [
     "# A sample groupby similar to above. \n",
-    "grouped = None"
+    "grouped = Non"
    ]
   },
   {
