Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1877,7 +1877,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped"
+   ]
   },
   {
    "cell_type": "markdown",
