--- a/index.ipynb
+++ b/index.ipynb
@@ -1912,7 +1912,7 @@
    "outputs": [],
    "source": [
     "# First, reset the index. Notice the subtle difference; State and Gender are now columns rather then the index.\n",
-    "grouped = None"
+    "grouped = groupedreset_index()"
    ]
   },
   {
