--- a/index.ipynb
+++ b/index.ipynb
@@ -1907,12 +1907,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Deaths</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Population</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>10753.325000</td>\n",
+       "      <td>10</td>\n",
+       "      <td>116297</td>\n",
+       "      <td>1.078713e+06</td>\n",
+       "      <td>2087</td>\n",
+       "      <td>4334752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>10765.850000</td>\n",
+       "      <td>10</td>\n",
+       "      <td>88930</td>\n",
+       "      <td>1.014946e+06</td>\n",
+       "      <td>1129</td>\n",
+       "      <td>4284775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>679.975000</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4727</td>\n",
+       "      <td>1.440403e+05</td>\n",
+       "      <td>1224</td>\n",
+       "      <td>682855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>860.357143</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5185</td>\n",
+       "      <td>1.518884e+05</td>\n",
+       "      <td>578</td>\n",
+       "      <td>770502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>8998.386364</td>\n",
+       "      <td>21</td>\n",
+       "      <td>133923</td>\n",
+       "      <td>1.246502e+06</td>\n",
+       "      <td>12211</td>\n",
+       "      <td>6265346</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     State  Gender        Deaths                Population                \n",
+       "                            mean min     max          mean    min      max\n",
+       "0  Alabama  Female  10753.325000  10  116297  1.078713e+06   2087  4334752\n",
+       "1  Alabama    Male  10765.850000  10   88930  1.014946e+06   1129  4284775\n",
+       "2   Alaska  Female    679.975000  13    4727  1.440403e+05   1224   682855\n",
+       "3   Alaska    Male    860.357143  12    5185  1.518884e+05    578   770502\n",
+       "4  Arizona  Female   8998.386364  21  133923  1.246502e+06  12211  6265346"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# First, reset the index. Notice the subtle difference; State and Gender are now columns rather then the index.\n",
-    "grouped = groupedreset_index()"
+    "grouped = grouped.reset_index()\n",
+    "grouped.head()"
    ]
   },
   {
