Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2069,11 +2069,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultiIndex(levels=[['Deaths', 'Population', 'Gender', 'State'], ['mean', 'min', 'max', '']],\n",
+       "           labels=[[3, 2, 0, 0, 0, 1, 1, 1], [3, 3, 0, 1, 2, 0, 1, 2]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Notice that this causes columns to be MultiIndexed!\n"
+    "#Notice that this causes columns to be MultiIndexed!\n",
+    "grouped.columns"
    ]
   },
   {
