--- a/index.ipynb
+++ b/index.ipynb
@@ -2105,7 +2105,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped.columns.get_level_values"
+   ]
   },
   {
    "cell_type": "markdown",
