--- a/index.ipynb
+++ b/index.ipynb
@@ -2102,11 +2102,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['State', 'Gender', 'Deaths', 'Deaths', 'Deaths', 'Population',\n",
+       "       'Population', 'Population'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "grouped.columns.get_level_values"
+    "grouped.columns.get_level_values(0)"
    ]
   },
   {
