--- a/index.ipynb
+++ b/index.ipynb
@@ -2337,7 +2337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2410,7 +2410,7 @@
        "California  48312.840909  49555.522727"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2434,7 +2434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2458,7 +2458,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th>Gender</th>\n",
-       "      <th>index</th>\n",
        "      <th>State</th>\n",
        "      <th>Female</th>\n",
        "      <th>Male</th>\n",
@@ -2467,35 +2466,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>10753.325000</td>\n",
        "      <td>10765.850000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Alaska</td>\n",
        "      <td>679.975000</td>\n",
        "      <td>860.357143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Arizona</td>\n",
        "      <td>8998.386364</td>\n",
        "      <td>10036.204545</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>Arkansas</td>\n",
        "      <td>6621.615385</td>\n",
        "      <td>6301.690476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>California</td>\n",
        "      <td>48312.840909</td>\n",
        "      <td>49555.522727</td>\n",
@@ -2505,15 +2499,15 @@
        "</div>"
       ],
       "text/plain": [
-       "Gender  index       State        Female          Male\n",
-       "0           0     Alabama  10753.325000  10765.850000\n",
-       "1           1      Alaska    679.975000    860.357143\n",
-       "2           2     Arizona   8998.386364  10036.204545\n",
-       "3           3    Arkansas   6621.615385   6301.690476\n",
-       "4           4  California  48312.840909  49555.522727"
+       "Gender       State        Female          Male\n",
+       "0          Alabama  10753.325000  10765.850000\n",
+       "1           Alaska    679.975000    860.357143\n",
+       "2          Arizona   8998.386364  10036.204545\n",
+       "3         Arkansas   6621.615385   6301.690476\n",
+       "4       California  48312.840909  49555.522727"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
