--- a/index.ipynb
+++ b/index.ipynb
@@ -2538,7 +2538,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now let's make a sweet bar chart!!\n"
+    "# Now let's make a sweet bar chart!!\n",
+    "pivot.plot(kind='barh',figsize=(15,8));"
    ]
   },
   {
