Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2712,7 +2712,7 @@
    "outputs": [],
    "source": [
     "#If we wanted to more permanently change the index we would set it first and then plot:\n",
-    "pivot = pivot.set_index('')"
+    "pivot = pivot.set_index('State')"
    ]
   },
   {
